plugins/formal-verification/testData/diagnostics/no_contracts/full_viper_dump.kt
// Check class generation.
class Foo(val x: Int)

fun <!VIPER_TEXT!>f<!>() {
    val foo = Foo(0)
}